--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Music&family=Ubuntu&display=swap')
 @import '_mixins'
 :root
   --theme-color: #60007a
-$theme-color: #333
 #app
   height: 100%
   max-width: 1200px
@@ -48,7 +48,7 @@ $theme-color: #333
 .navpage
   display: flex
   flex-direction: column
-  min-height: 100vh
+  min-height: calc(100vh - 58px)
   background: white
   position: relative
   z-index: 0
@@ -133,6 +133,7 @@ select
   padding-right: 2em
   color: var(--theme-color)
   background: url(../image/caret-down.svg) no-repeat calc(100% - 1em) center
+  background-color: white
   &, &:focus, &:active, &:focus:active
     outline: none
   @at-root .input > label > &
