set gc timeout for safari delay

--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -260,11 +260,12 @@ select
     outline: none
     border-radius: .125rem
     flex: 1 1 1%
-    background: color(powder)
+    background-color: color(powder)
     &:focus
       box-shadow: 0 0 0 2px color(light)
-      background: color(light)
+      background-color: color(light)
   select
+    background-size: .6em 1em
     &:focus
       background-color: white
   input
