--- a/src/assets/sass/_mixins.sass
+++ b/src/assets/sass/_mixins.sass
@@ -130,6 +130,7 @@ $color: (powder: #f6f7f9, light: #e9ebee, gray: #bec4c9, dark: #9ca1a6, black: #
     filter: saturate(100%)
 
 =button-svg-icon
+  position: relative
   > svg
     font-size: 1.2em
     position: absolute
