--- a/src/assets/sass/modal.sass
+++ b/src/assets/sass/modal.sass
@@ -14,28 +14,33 @@
   &:before
     content: ''
     height: 100%
-  &:before, > *
-    display: inline-block
-    vertical-align: middle
+    position: absolute
+    top: 0
+    right: 0
+    left: 0
+    bottom: 0
+    z-index: -1
   &:not(:empty)
     pointer-events: all
     background: rgba(color(black), .95)
     ~ *
       filter: blur(5px)
+  .modal
 .modal
   width: 800px
   max-width: 80vw
-  left: 50%
-  top: 50%
-  margin: 0 auto
+  margin: 12vh auto
   background: white
   box-shadow: 0 3px 5px rgba(black, .1), 0 8px 16px -8px rgba(black, .1), 0 30px 50px -30px rgba(black, .5)
-  margin-top: -2vh
   border-radius: space()
-  &:before
-    content: ''
+  position: relative
+  &__bgclose
     position: fixed
     z-index: -1
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
   > *
     padding: space() space(lg)
     &:not(:first-child)
@@ -68,6 +73,8 @@
     transform: translate(35%, -35%)
     font-size: 1rem
   &__foot
+    &:empty
+      display: none
     &__actions
       display: flex
       justify-content: flex-end
