remove 8beat rest limitt

--- a/src/assets/sass/strumming.sass
+++ b/src/assets/sass/strumming.sass
@@ -393,7 +393,7 @@ $arrow-size: 4px
       + .rest
         box-shadow: 1rem 0 0 0.05rem
   @at-root .beat8 &
-    &:nth-child(2):before
+    &:not(.rest):nth-child(2):before
       transform: translateY(100%) rotate(-135deg)
       top: auto
       bottom: -0.125rem
