fix preference style

--- a/src/assets/sass/_mixins.sass
+++ b/src/assets/sass/_mixins.sass
@@ -31,7 +31,7 @@ $color: (powder: #f6f7f9, light: #e9ebee, gray: #bec4c9, dark: #9ca1a6, black: #
     background: var(--theme-color)
     height: 100%
     box-sizing: border-box
-    padding: space(lg) 0
+    // padding: space(lg) 0
     transform: translateX(-100%)
     transition: .2s
     min-width: 200px
